--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,7 @@
     <string name="pref_form_hexagon_value" translatable="false">шестиугольник</string>
 
 
+    <string name="pref_search_url" translatable="false">адрес</string>
+    <string name="pref_url_default" translatable="false">http://google.com</string>
+
 </resources>
